tweak memory to see if unit test behaves better